# AllVueAppService

./: .gitattributes  .gitignore  .mailmap  LOCAL_PERMISSION_TESTING_SETUP.md  PostDeploy.ps1  README.md  Vue Runbook.md  pre-build.ps1  pyproject.toml  where's-vue-going.md
src/Vue.Snowflake/: .env.test  .sqlfluff  README.md  Snowflake.yaml  Vue.Snowflake.csproj  main.py  pyproject.toml  stage_python.py  uv-setup.sh  workshop.md
src/Vue.Snowflake/Airflow/dags/: README.md  agents.md  check_azure_mssql_connection.py  check_snowflake_connection.py  full_copy_answers_to_snowflake.py  full_copy_change_tracked_tables.py  refresh_ct_tables_list.py  responsecounts_to_snowflake.py  sync_answers_to_snowflake.py  sync_change_tracked_tables.py  sync_monitoring.py
src/Vue.Snowflake/Airflow/helm-charts/: Dockerfile  README.md  airflow-service-monitor.yaml  cluster-secret-store.yaml  external-secrets-values.yaml  prometheus-values.yaml
src/Vue.Snowflake/Airflow/sql-scripts/: enable_change_tracking-brandvuemeta.sql  enable_change_tracking-vueexport.sql
src/Vue.Snowflake/DCM/: CreateAgentUsers.sql
src/Vue.Snowflake/DCM/Version/: 1.1.5__filtered_metric.sql  V1.1.2__AddCalculationLogExtras.sql  V1.1.3__responses.sql  V1.1.4__AddCalculationSourceColumn.sql  V1.1.4__impl_variable_expression.sql
src/Vue.Snowflake/Streamlit/: environment.yml  streamlit_app.py
src/Vue.Snowflake/schemas/client_all__response_set/: README.md
src/Vue.Snowflake/schemas/impl_response_set/: README.md
src/Vue.Snowflake/schemas/impl_result/: README.md
src/Vue.Snowflake/tests/: conftest.py  patches.py
(+7692 files in other folders)
