[project]
name = "vue-snowflake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.4",
    "apache-airflow-providers-microsoft-mssql>=4.3.2",
    "apache-airflow-providers-snowflake>=6.5.2",
    "graphviz>=0.21",
    "pandas>=2.3.1",
    "pymssql>=2.3.7",
    "pyodbc>=5.2.0",
    "pytest>=8.4.2",
    "snowflake-snowpark-python[localtest]>=1.37.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
